# rural-producer-api

./: .gitignore  README.md
server/: Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
server/api/: .env.example  api.py  settings.py  urls.py
server/api/enums/: document_types_enum.py
server/api/errors/: base_error.py  farm_rural_producer_culture_not_found.py  farm_rural_producer_not_found.py  invalid_document_type.py  rural_producer_not_found.py
server/api/migrations/: 0001_initial.py  0002_alter_farmcultureruralproducer_farm_id_and_more.py  0003_rename_farm_id_farmcultureruralproducer_farm.py
server/api/models/: __init__.py  base.py  document_type_model.py  farm_culture_rural_producer_model.py  farm_culture_type_model.py  farm_rural_producer_model.py  rural_producer_model.py
server/api/repositories/: document_type_repository.py  farm_culture_types_repository.py  farm_rural_culture_producer_repository.py  farm_rural_producer_repository.py  rural_producer_repository.py
server/api/schemas/: dashboard_schemas.py  document_schemas.py  document_view_schemas.py  rural_producers_schemas.py
server/api/serializers/: document_types_serializer.py
server/api/services/: add_culture_farm_service.py  add_rural_producer_service.py  dashboard_data_calculator.py  edit_rural_producer_service.py  remove_farm_culture_rural_producer_service.py  remove_rural_producer_service.py
server/api/utils/: document_validators.py  tools.py
server/api/validators/: document_validators.py  (+1 more)
server/config/: asgi.py  settings.py  wsgi.py
(+5 files in other folders)
