[tool.poetry]
name = "agro-api"
version = "0.1.0"
description = "Rural Producer Manager Api"
authors = ["Gustavo Alex Torres"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
